# vastop

./: .dockerignore  .env.example  .gitignore  .trivyignore.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: release.yml
deploy/: deployment.yaml  namespace.yaml  rbac.yaml
deploy/crds/: vastalert-crd.yaml  vastenvvar-crd.yaml  vastinstance-crd.yaml
deploy/examples/: 01-secrets.yaml  02-template-ubuntu.yaml  03-template-pytorch.yaml  04-order-cheap-any.yaml  05-order-rtx4090.yaml  06-instance.yaml  07-alert.yaml  08-template-llm-inference.yaml  09-template-stable-diffusion.yaml  10-template-args-only.yaml  11-order-h100-train.yaml  12-order-interruptible.yaml  13-instance-no-recreate.yaml  14-instance-interruptible.yaml  15-alert-auto-recreate.yaml  16-alert-notify-only.yaml  17-instance-healthcheck.yaml  18-instance-rollover.yaml  19-template-healthcheck-ports.yaml  20-template-private-registry.yaml  21-order-geo-pinned.yaml  22-order-legacy-flat.yaml  23-instance-env-overrides.yaml  24-envvar-inline.yaml  25-envvar-from-secret.yaml  README.md
deploy/examples/drift-test/: 01-template-v1.yaml  02-order.yaml  03-instance.yaml  04-template-v2-patch.yaml  README.md  run.sh  teardown.sh
deploy/helm/vastai-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/vastai-operator/templates/: NOTES.txt  (+6 more)
src/vastai_operator/: __init__.py  __main__.py  config.py  health.py  launcher.py  resolver.py  slack.py  timeutils.py  vast_client.py
src/vastai_operator/handlers/: __init__.py  alert.py  envvar.py  instance.py  order.py  template.py
tests/: conftest.py  test_alert.py  test_e2e_recreate.py  test_edge_cases.py  test_envvar.py  test_handlers.py  test_health.py  test_order_filters.py  test_rollover.py  test_template_lifecycle.py  test_timeutils.py  test_vast_client.py
(+2 files in other folders)
